-
Bug
-
Resolution: Done
-
P2: Important
-
None
-
Qt Creator 4.0.0
-
None
-
OS X
- Open a qml file with features not supported by Qt Quick Designer (e.g. imperative code).
- Click "Ignore" for the "Unsupported features" warning
- Change something
- Undo
Expected: The change simply gets reverted
Actual: Additionally the "Unsupported features" warning reappears
For Gerrit Dashboard: QTCREATORBUG-16306 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
189165,4 | QmlDesigner: Only show warnings when opening document | 4.3 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |