QmlDesigner: Only show warnings when opening document

Otherwise the warnings become too annoying, since they are
also triggered by undo/redo.
Do not disable the form editor in case of warnings.

Task-number: QTCREATORBUG-16306
Change-Id: Ieb1d6072269935e420e9cf988c900e1af792686f
Reviewed-by: Tim Jenssen <tim.jenssen@qt.io>